# qpay-python

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: publish.yml  qa.yml
qpay/: __init__.py  auth.py  exceptions.py  main.py  singleton.py
tests/: test_auth.py  test_client.py  test_singleton.py
