[tool.poetry]
name = "qpay"
version = "1.0.0"
description = "QPay v2 SDK client for Python projects"
authors = ["khasbilegt <khasbilegt.ts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
requests-mock = "^1.12.1"
pytest-cov = "^5.0.0"



[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/52778657/packages/pypi"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
